test/e2e/failing/config.js
export default {
  www_base_host: process.env.DEPLOY_HOST || 'https://www-test.adtechmedia.io'
}
